--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^2.9.0",
+    "@types/xlsx": "^0.0.36",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.294.0",
@@ -21,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.20.1",
     "recharts": "^2.8.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
